--- a/style.css
+++ b/style.css
@@ -460,7 +460,7 @@ header .navbar ul li a:hover{
 
  .myproj{
      background-color:#333;
-     width: 30%;
+     width: 25vw;
     margin: auto;
     border-radius: 40px;
 
